<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/userhome"
            android:icon="@drawable/home"
            android:title="@string/userList"/>
        <item
            android:id="@+id/inbox"
            android:icon="@drawable/inbox"
            android:title="@string/inbox" />
        <item
            android:id="@+id/traderRequest"
            android:icon="@drawable/requests"
            android:title="@string/Requests"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/setting"
            android:title="@string/setting"/>
        <item
            android:id="@+id/bookmarks"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmarks"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/LogOut"/>
        <item
            android:id="@+id/delete_account"
            android:icon="@drawable/delete_user"
            android:title="@string/delete_account"/>

    </group>

</menu>
