<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_style"
>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/signUpTitle"
    android:textStyle="bold"
    android:fontFamily="@font/urdu"
    android:textSize="20dp"
    android:layout_marginBottom="25dp"/>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    android:layout_marginBottom="25dp">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fertilizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fertilizer"
            android:textSize="20dp"
            android:fontFamily="@font/urdu"
            android:textColor="#000"
            />
        <RadioButton
            android:id="@+id/radio_fertilizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ferti_clicked"
            />
        <TextView
            android:id="@+id/farmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/farmer"
            android:textSize="20dp"
            android:fontFamily="@font/urdu"
            android:textColor="#000"
            android:layout_weight="1.3"/>
        <RadioButton
            android:id="@+id/radio_farmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="farmer_clicked"
            />
        <TextView
            android:id="@+id/trader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trader"
            android:textSize="20dp"
            android:fontFamily="@font/urdu"
            android:textColor="#000"
            android:layout_weight="1.3"/>
        <RadioButton
            android:id="@+id/radio_trader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="trader_clicked"
            />
        <TextView
            android:id="@+id/broker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broker"
            android:textSize="20dp"
            android:fontFamily="@font/urdu"
            android:textColor="#000"
            android:layout_weight="1.3"/>
        <RadioButton
            android:id="@+id/radio_broker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="broker_clicked"/>
    </RadioGroup>
</LinearLayout>
<Button
    android:id="@+id/go_forward"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/go"
    android:textSize="20dp"
    android:fontFamily="@font/urdu"
    android:background="@drawable/button_style"
    android:onClick="Go_Forward"/>
</LinearLayout>
