<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style"
    tools:context="com.example.root.formarsupport.Farmer_signUp">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TODO: Update blank fragment layout -->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personProfileIs"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile1"/>
        <ImageView
            android:id="@+id/UploadImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/personProfileIs"
            android:layout_alignBottom="@id/personProfileIs"
            android:src="@drawable/upload"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uplaodImage"
            android:fontFamily="@font/urdu"
            android:layout_toRightOf="@id/UploadImage"
            android:layout_alignBottom="@id/UploadImage"
            android:textSize="20sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/personProfileIs"
            android:layout_marginTop="14dp">
            <TextView
                android:id="@+id/WriteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WriteName"
                android:fontFamily="@font/urdu"
                android:textColor="#FF0000"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/urdu"
                android:freezesText="true"
                android:hint="@string/name"
                android:clickable="true"
                android:inputType="textPersonName"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name_frame"
            android:layout_alignStart="@+id/name_frame"
            android:layout_below="@+id/name_frame">
            <TextView
                android:id="@+id/invalidPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InValidPhone"
                android:fontFamily="@font/urdu"
                android:textColor="#FF0000"
                android:visibility="invisible"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:maxLength="13"
            android:fontFamily="@font/urdu"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Code_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phone_frame"
            android:layout_alignStart="@+id/phone_frame"
            android:layout_below="@+id/phone_frame">
            <TextView
                android:id="@+id/invalidCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InValidCode"
                android:fontFamily="@font/urdu"
                android:textColor="#FF0000"
                android:visibility="invisible"/>
            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:ems="10"
                android:maxLength="13"
                android:fontFamily="@font/urdu"
                android:hint="@string/code"
                android:inputType="phone"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/addInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/Code_frame"
            android:layout_alignStart="@id/Code_frame"
            android:layout_below="@id/Code_frame"
            android:orientation="horizontal"
            android:weightSum="7">

        <ImageButton
            android:id="@+id/add_new_info"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginTop="29dp"
            android:src="@drawable/plus"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:fontFamily="@font/urdu" />
        <TextView
            android:id="@+id/add_product_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_info"
            android:layout_weight="6"
            android:layout_marginTop="40dp"
            android:textSize="20dp"
            android:fontFamily="@font/urdu"/>
        </LinearLayout>
        <Button
            android:id="@+id/sign_Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/addInfo"
            android:layout_alignStart="@id/addInfo"
            android:layout_below="@id/addInfo"
            android:layout_marginTop="29dp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/urdu"
            android:text="@string/go"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="17dp"
            android:fontFamily="@font/urdu"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@+id/sign_Up"
            android:layout_toRightOf="@+id/sign_Up"
            android:text="@string/incomplete"
            android:textColor="#ff0000"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/resendIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/sign_Up"
            android:layout_alignParentRight="true"
            android:text="@string/Resend"
            android:fontFamily="@font/urdu"
            android:textSize="20dp"
            android:textStyle="bold"
            />


    </RelativeLayout>
</ScrollView>

</RelativeLayout>
