<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpTitle"
        android:textStyle="bold"
        android:fontFamily="@font/urdu"
        android:textSize="20dp"
        android:layout_marginBottom="25dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="25dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fertilizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruitORvege"
                android:textSize="20dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/urdu"
                android:textColor="#000"
                />
            <RadioButton
                android:id="@+id/R_fertilizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fruits_vegetables"
                />
            <TextView
                android:id="@+id/farmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crops"
                android:textSize="20dp"
                android:fontFamily="@font/urdu"
                android:textColor="#000"
                android:layout_weight="0.5"/>
            <RadioButton
                android:id="@+id/R_farmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="crops"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_forward"
        android:textSize="20sp"
        android:fontFamily="@font/urdu"
        android:background="@drawable/button_style"
        android:onClick="move_forward"/>
</LinearLayout>
