<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_style"
        android:layout_marginBottom="5dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/commentImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:id="@+id/commentBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/commentImage"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="5dp">

            <EditText
                android:id="@+id/commentIs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:fontFamily="@font/urdu"
                android:textSize="20dp"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="15dp"
                android:focusable="false"
                android:inputType="none"
                />
        <TextView
            android:id="@+id/commentname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/urdu"
            android:textSize="20dp"
            android:textColor="#051d39"/>
        </LinearLayout>
        <Button
            android:id="@+id/deletecomment"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/deletecomment"
            android:fontFamily="@font/urdu"
            android:layout_below="@id/commentBlock"
            android:layout_toLeftOf="@id/commentImage"
            android:background="@drawable/button_style"
            android:visibility="gone"/>
        <Button
            android:id="@+id/editcomment"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/editcomment"
            android:fontFamily="@font/urdu"
            android:layout_below="@id/commentBlock"
            android:layout_toLeftOf="@id/deletecomment"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_style"
            android:visibility="gone"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>

</RelativeLayout>